test/classes/initializers/parentCall/inLoop.good
inLoop.chpl:13: error: use of super.init() call in loop body
